Closed Bug 1710603 Opened 3 years ago Closed 3 years ago

getaddrinfo() returns EAI_NONAME when running under SocketProcess

Categories

(Core :: Security: Process Sandboxing, defect)

defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Repro'd locally on m-c while investigating bug 1619661

STR:

  1. Build m-c
  2. MOZ_FORCE_USE_SOCKET_PROCESS=1 ./mach run

Expected:
I can load a webpage

Actual:
Error with name not found

Repro on my ubuntu 21.04 laptop

Component: Networking → Security: Process Sandboxing
Pushed by alissy@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/699752e34af8
Allow stat on / from socket process for glibc 2.33 getaddrinfo() r=gcp
Blocks: 1710625
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: