Bug 1710603 - Allow stat on / from socket process for glibc 2.33 getaddrinfo() r=gcp

Differential Revision: https://phabricator.services.mozilla.com/D114841